css/wevents.css
#we-container {
	margin: 0 auto;
	width: 35em;
}
#we-info {
	min-height: 1em;
}
#we-data-dump {
	font-style: italic;
}
#we-select {
	display: flex;
	gap: 1em;
	flex-wrap: wrap;
	justify-content: stretch;
	place-items: center;
}
#we-select > div {
	display: flex;
	gap: 1em;
	align-items: center;
	flex-grow: 1;
}
#we-select label {
	font-weight: bold;
	min-width: 3em;
}
#we-select button, #we-select select {
	min-width: 4em;
	flex: 1;
}
#we-events {
	height: 50vh;
	overflow-y: scroll;
}
@media (max-width: 799px) {
	#we-container {
		width: 100%;
	}
}

